-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
-
6d4e5a000 (14.0)
When going to analyze->cppcheck and changing some checkboxes, add custom arguments and others to fit your system and such, then everything is back to default on next run.
I think options by default should be stored on a per project basis.
For Gerrit Dashboard: QTCREATORBUG-31092 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
573524,2 | Cppcheck: Treat manual run settings as project settings | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |