Cppcheck: Treat manual run settings as project settings

Instead of always deriving from global settings store the
settings for the manual run into the project settings.

Fixes: QTCREATORBUG-31092
Change-Id: I7854cff4e71b58225c7e9c1198c4e60128ed07e4
Reviewed-by: hjk <hjk@qt.io>